# mcmc_inference

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  config_1000pcm.yaml
docs/: mkdocs.yml
docs/docs/: index.md
mcmc_inference/: 00_prepare_data.py  01_gp_train.py  02_mcmc-multiple-var.py  02_mcmc.py  03_mcmc_plots.py  __init__.py  dataset.py  features.py  plots.py
mcmc_inference/data_preperation/ace/: 00_generate_perturbed_endfs.py  01_generate_aces.py  02_update_header_ace.py  README.md
mcmc_inference/data_preperation/integral/: 00_generate_serpent_inputs.py  01_parse_serpent_results.py
mcmc_inference/data_preperation/microscopic/: 00_perturb_parameters.py  (+4 more)
mcmc_inference/inference/: mcmc.py
mcmc_inference/modeling/: predict.py  train.py
mcmc_inference/visualization/: gp_plots.py  mcmc_plots.py
models/: cr53_thin_gp.joblib  hmi001_gp.joblib  pmi002_gp.joblib
notebooks/: 0.01_create-fake-data.ipynb
reports/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  mcmc_inference.aux  mcmc_inference.bbl  mcmc_inference.blg  mcmc_inference.fdb_latexmk  mcmc_inference.fls  mcmc_inference.out  mcmc_inference.tex  posterior_summary.csv  references.bib
reports/annals_nuclear_energy/: elsarticle-template-num.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
reports/report/: mcmc_inference_v1.aux  mcmc_inference_v1.bbl  mcmc_inference_v1.blg  mcmc_inference_v1.fdb_latexmk  mcmc_inference_v1.fls  mcmc_inference_v1.tex
scripts/: run_complete.py
(+2 files in other folders)
