[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mcmc_inference"
version = "0.0.1"
description = "A project in which Markov Chain Monte Carlo is used to infer the nuclear data using microscopic and integral measurements. For each measurement, a surrogate model is trained using a Gaussian Process."
authors = [
  { name = "Daan Houben" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["mcmc_inference"]
include = ["pyproject.toml", "mcmc_inference/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mcmc_inference"]
force-sort-within-sections = true

